--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "description": "<h1 align=center> <img src = \"img/logo.png\" width='300px'> </h1>",
   "main": "server.js",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  
   "dependencies": {
     "express": "^4.17.1",
     "nunjucks": "^3.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
